Updated shop pages

--- a/solution-hw1/cart.html
+++ b/solution-hw1/cart.html
@@ -6,39 +6,47 @@
   
   <body>
 
-    <img src= "/assets/logo/logo-01.svg" alt="Bun Bun logo" class="logo">
+    <a href="/solution-hw1/products.html"><img src= "/assets/logo/logo-01.svg" alt="Bun Bun logo" class="logo">
     <hr>
     <nav>
-      <h1><a href="/products.html"></a>PRODUCTS</h1>
-      <h2><a href="/cart.html"></a>CART</h2>
+      <ul class="navbar">
+        <li><a href="/solution-hw1/products.html">PRODUCTS</a></li>
+        <li><a href="/solution-hw1/cart.html">CART</a></li>
+      </ul>
     </nav>
     
     <br>
     
-    <div>
+    <div class="cart-list">
       <h3>Shopping cart</h3>
       <div class="cart-product">
         <img src= "/assets/products/original-cinnamon-roll.jpg" alt="Original cinnamon roll" class="cart-product-image">
         <p class="remove">Remove</p>
-        <p class="cart-product">Original Cinnamon Roll</p>
-        <p class="cart-product">Glazing: Keep original</p>
-        <p class="cart-product">Pack size: 1</p>
+        <div class="cart-info">
+          <p>Original Cinnamon Roll</p>
+          <p>Glazing: Keep original</p>
+          <p>Pack size: 1</p>
+        </div>
         <p class="cart-price">$2.49</p>
       </div>
       <div class="cart-product">
         <img src= "/assets/products/double-chocolate-cinnamon-roll.jpg" alt="Double chocolate cinnamon roll" class="cart-product-image">
         <p class="remove">Remove</p>
-        <p class="cart-product">Double Chocolate Cinnamon Roll</p>
-        <p class="cart-product">Glazing: Sugar milk</p>
-        <p class="cart-product">Pack size: 6</p>
+        <div class="cart-info">
+          <p>Double Chocolate Cinnamon Roll</p>
+          <p>Glazing: Sugar milk</p>
+          <p>Pack size: 6</p>
+        </div>
         <p class="cart-price">$27.45</p>
       </div>
     </div>
 
     <hr id="bold-line">
 
-    <p class="cart-price">Total: $29.94</p>
-    <button>Checkout</button>
+    <div id="cart-checkout">
+      <p class="cart-price">Total: $29.94</p>
+      <button>Checkout</button>
+    </div>
 
   </body>
 </html>
