changed file name

--- a/solution-hw1/index.html
+++ b/solution-hw1/index.html
@@ -6,11 +6,11 @@
   
   <body>
 
-    <a href="/solution-hw1/products.html"><img src= "/assets/logo/logo-01.svg" alt="Bun Bun logo" class="logo"></a>
+    <a href="/solution-hw1/index.html"><img src= "/assets/logo/logo-01.svg" alt="Bun Bun logo" class="logo"></a>
     <hr>
     <nav>
       <ul class="navbar">
-        <li><a href="/solution-hw1/products.html">PRODUCTS</a></li>
+        <li><a href="/solution-hw1/index.html">PRODUCTS</a></li>
         <li><a href="/solution-hw1/cart.html">CART</a></li>
       </ul>
     </nav>
