--- a/solution-hw1/cart.html
+++ b/solution-hw1/cart.html
@@ -6,7 +6,7 @@
   
   <body>
 
-    <a href="/solution-hw1/index.html"><img src= "/assets/logo/logo-01.svg" alt="Bun Bun logo" class="logo">
+    <a href="/solution-hw1/index.html"><img src= "assets/logo/logo-01.svg" alt="Bun Bun logo" class="logo">
     <hr>
     <nav>
       <ul class="navbar">
@@ -20,7 +20,7 @@
     <div class="cart-list">
       <h3>Shopping cart</h3>
       <div class="cart-product">
-        <img src= "/assets/products/original-cinnamon-roll.jpg" alt="Original cinnamon roll" class="cart-product-image">
+        <img src= "assets/products/original-cinnamon-roll.jpg" alt="Original cinnamon roll" class="cart-product-image">
         <p class="remove">Remove</p>
         <div class="cart-info">
           <p>Original Cinnamon Roll</p>
@@ -30,7 +30,7 @@
         <p class="cart-price">$2.49</p>
       </div>
       <div class="cart-product">
-        <img src= "/assets/products/double-chocolate-cinnamon-roll.jpg" alt="Double chocolate cinnamon roll" class="cart-product-image">
+        <img src= "assets/products/double-chocolate-cinnamon-roll.jpg" alt="Double chocolate cinnamon roll" class="cart-product-image">
         <p class="remove">Remove</p>
         <div class="cart-info">
           <p>Double Chocolate Cinnamon Roll</p>
