--- a/solution-hw1/detail.html
+++ b/solution-hw1/detail.html
@@ -6,7 +6,7 @@
   
   <body>
 
-    <a href="/solution-hw1/index.html"><img src= "/assets/logo/logo-01.svg" alt="Bun Bun logo" class="logo">
+    <a href="/solution-hw1/index.html"><img src= "assets/logo/logo-01.svg" alt="Bun Bun logo" class="logo">
     <hr>
     <nav>
       <ul class="navbar">
@@ -19,7 +19,7 @@
     
     <h3>Original cinnamon roll</h3>
     <div class="detail-page">
-      <img src= "/assets/products/original-cinnamon-roll.jpg" alt="Original cinnamon roll" class="detail-product-image">
+      <img src= "assets/products/original-cinnamon-roll.jpg" alt="Original cinnamon roll" class="detail-product-image">
     
       <div class="selections">
         <p id="product-description">Customize our delicious, hand-made cinnamon roll to your liking!</p>
