--- a/solution-hw1/cart.html
+++ b/solution-hw1/cart.html
@@ -10,8 +10,8 @@
     <hr>
     <nav>
       <ul class="navbar">
-        <li><a href="/solution-hw1/index.html">PRODUCTS</a></li>
-        <li><a href="/solution-hw1/cart.html">CART</a></li>
+        <li><a href="../solution-hw1/index.html">PRODUCTS</a></li>
+        <li><a href="../solution-hw1/cart.html">CART</a></li>
       </ul>
     </nav>
     
