--- a/solution-hw1/index.html
+++ b/solution-hw1/index.html
@@ -10,8 +10,8 @@
     <hr>
     <nav>
       <ul class="navbar">
-        <li><a href="/solution-hw1/index.html">PRODUCTS</a></li>
-        <li><a href="/solution-hw1/cart.html">CART</a></li>
+        <li><a href="../solution-hw1/index.html">PRODUCTS</a></li>
+        <li><a href="../solution-hw1/cart.html">CART</a></li>
       </ul>
     </nav>
 
@@ -20,42 +20,42 @@
     <div class="products-list">
       <h3>Our hand-made cinnamon rolls</h3>
       <div class="product-box">
-        <a href="/solution-hw1/detail.html">
+        <a href="../solution-hw1/detail.html">
         <img src= "assets/products/original-cinnamon-roll.jpg" alt="Original cinnamon roll" class="product-image">
         <p class="product-name">Original cinnamon roll</p>
         <p>$2.49</p>
         </a>
       </div>
       <div class="product-box">
-        <a href="/solution-hw1/detail.html">
+        <a href="../solution-hw1/detail.html">
         <img src= "assets/products/apple-cinnamon-roll.jpg" alt="Apple cinnamon roll" class="product-image">
         <p class="product-name">Apple cinnamon roll</p>
         <p>$3.49</p>
         </a> 
       </div>
       <div class="product-box">
-        <a href="/solution-hw1/detail.html">
+        <a href="../solution-hw1/detail.html">
         <img src= "assets/products/raisin-cinnamon-roll.jpg" alt="Raisin cinnamon roll" class="product-image">
         <p class="product-name">Raisin cinnamon roll</p>
         <p>$2.99</p>
         </a>
       </div>
       <div class="product-box">
-        <a href="/solution-hw1/detail.html">
+        <a href="../solution-hw1/detail.html">
         <img src= "assets/products/walnut-cinnamon-roll.jpg" alt="Walnut cinnamon roll" class="product-image">
         <p class="product-name">Walnut cinnamon roll</p>
         <p>$3.49</p>
         </a>
       </div>
       <div class="product-box">
-        <a href="/solution-hw1/detail.html">
+        <a href="../solution-hw1/detail.html">
         <img src= "assets/products/double-chocolate-cinnamon-roll.jpg" alt="Double-chocolate cinnamon roll" class="product-image">
         <p class="product-name">Double-chocolate cinnamon roll</p>
         <p>$3.99</p>
         </a>
       </div>
       <div class="product-box">
-        <a href="/solution-hw1/detail.html">
+        <a href="../solution-hw1/detail.html">
         <img src= "assets/products/strawberry-cinnamon-roll.jpg" alt="Strawberry cinnamon roll" class="product-image">
         <p class="product-name">Strawberry cinnamon roll</p>
         <p>$3.99</p>
