--- a/solution-hw1/index.html
+++ b/solution-hw1/index.html
@@ -6,7 +6,7 @@
   
   <body>
 
-    <a href="/solution-hw1/index.html"><img src= "assets/logo/logo-01.svg" alt="Bun Bun logo" class="logo"></a>
+    <a href="../solution-hw1/index.html"><img src= "assets/logo/logo-01.svg" alt="Bun Bun logo" class="logo"></a>
     <hr>
     <nav>
       <ul class="navbar">
