--- a/solution-hw2/cart.html
+++ b/solution-hw2/cart.html
@@ -1,52 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
-  <meta charset="UTF-8">
-  <title>Page Title</title>
-  <link href="css/style.css" rel="stylesheet" type="text/css">
-  
-  <body>
+<meta charset="UTF-8">
+<title>Page Title</title>
+<link href="css/style.css" rel="stylesheet" type="text/css">
 
-    <a href="../solution-hw2/index.html"><img src= "assets/logo/logo-01.svg" alt="Bun Bun logo" class="logo">
-    <hr>
-    <nav>
-      <ul class="navbar">
-        <li><a href="../solution-hw2/index.html">PRODUCTS</a></li>
-        <li><a href="../solution-hw2/cart.html">CART</a></li>
-      </ul>
-    </nav>
-    
-    <br>
-    
-    <div class="cart-list">
-      <h3>Shopping cart</h3>
-      <div class="cart-product">
-        <img src= "assets/products/original-cinnamon-roll.jpg" alt="Original cinnamon roll" class="cart-product-image">
-        <p class="remove">Remove</p>
-        <div class="cart-info">
-          <p>Original Cinnamon Roll</p>
-          <p>Glazing: Keep original</p>
-          <p>Pack size: 1</p>
+<body>
+
+  <div class="page-header"> <!--header-->
+    <a href="../solution-hw2/index.html"><img src="assets/logo/logo-01.svg" alt="Bun Bun logo" class="logo"></a>
+    <div class="header-right">
+      <nav>
+        <ul class="navbar">
+          <li><a href="../solution-hw2/index.html">PRODUCTS</a></li>
+          <li><a href="../solution-hw2/cart.html">CART</a></li>
+        </ul>
+      </nav>
+      <hr>
+      <h1>Shopping cart</h1>
+    </div>
+
+  </div>
+
+  <br>
+
+  <div class="cart-list"> <!--contains both products in cart-->
+
+    <div class="cart-product"> <!--image, details, price, remove-->
+      <div class="cart-product-main"> <!--image, details, price-->
+        <img src="assets/products/original-cinnamon-roll.jpg" alt="Original cinnamon roll" class="cart-product-image">
+        <div class="cart-info"> <!--only details and price-->
+          <div class="cart-info-details"> <!--just details-->
+            <p>Original Cinnamon Roll</p>
+            <p>Glazing: Keep original</p>
+            <p>Pack size: 1</p>
+          </div>
+          <div class="cart-info-price">
+            <p class="cart-price">$2.49</p>
+          </div>
         </div>
-        <p class="cart-price">$2.49</p>
       </div>
-      <div class="cart-product">
-        <img src= "assets/products/double-chocolate-cinnamon-roll.jpg" alt="Double chocolate cinnamon roll" class="cart-product-image">
-        <p class="remove">Remove</p>
-        <div class="cart-info">
-          <p>Double Chocolate Cinnamon Roll</p>
-          <p>Glazing: Sugar milk</p>
-          <p>Pack size: 6</p>
+      <p class="remove">Remove</p>
+    </div>
+
+    <div class="cart-product"> <!--image, details, price, remove-->
+      <div class="cart-product-main"> <!--image, details, price-->
+        <img src="assets/products/double-chocolate-cinnamon-roll.jpg" alt="Double chocolate cinnamon roll" class="cart-product-image">
+        <div class="cart-info"> <!--only details and price-->
+          <div class="cart-info-details"> <!--just details-->
+            <p>Double Chocolate Cinnamon Roll</p>
+            <p>Glazing: Sugar milk</p>
+            <p>Pack size: 6</p>
+          </div>
+          <div class="cart-info-price">
+            <p class="cart-price">$27.45</p>
+          </div>
         </div>
-        <p class="cart-price">$27.45</p>
       </div>
+      <p class="remove">Remove</p>
     </div>
 
     <hr id="bold-line">
 
     <div id="cart-checkout">
-      <p class="cart-price">Total: $29.94</p>
-      <button>Checkout</button>
+      <div id="cart-price">
+        <p>Total</p>
+        <p>$29.94</p>
+      </div>
+      <button id="checkout-button">Checkout</button>
     </div>
 
-  </body>
+</body>
+
 </html>
