--- a/solution-hw2/index.html
+++ b/solution-hw2/index.html
@@ -1,68 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
-  <meta charset="UTF-8">
-  <title>Page Title</title>
-  <link href="css/style.css" rel="stylesheet" type="text/css">
-  
-  <body>
+<meta charset="UTF-8">
+<title>Page Title</title>
+<link href="css/style.css" rel="stylesheet" type="text/css">
 
-    <a href="../solution-hw2/index.html"><img src= "assets/logo/logo-01.svg" alt="Bun Bun logo" class="logo"></a>
-    <hr>
-    <nav>
-      <ul class="navbar">
-        <li><a href="../solution-hw2/index.html">PRODUCTS</a></li>
-        <li><a href="../solution-hw2/cart.html">CART</a></li>
-      </ul>
-    </nav>
+<body>
+    <div class="page-header"> <!--header-->
+        <a href="../solution-hw2/index.html"><img src="assets/logo/logo-01.svg" alt="Bun Bun logo" class="logo"></a>
+        <div class="header-right">
+            <nav>
+                <ul class="navbar">
+                    <li><a href="../solution-hw2/index.html">PRODUCTS</a></li>
+                    <li><a href="../solution-hw2/cart.html">CART</a></li>
+                </ul>
+            </nav>
+            <hr>
+            <h1>Our hand-made cinnamon rolls</h1>
+        </div>
+
+    </div>
+
 
     <br>
 
-    <div class="products-list">
-      <h3>Our hand-made cinnamon rolls</h3>
-      <div class="product-box">
-        <a href="../solution-hw2/detail.html">
-        <img src= "assets/products/original-cinnamon-roll.jpg" alt="Original cinnamon roll" class="product-image">
-        <p class="product-name">Original cinnamon roll</p>
-        <p>$2.49</p>
-        </a>
-      </div>
-      <div class="product-box">
-        <a href="../solution-hw2/detail.html">
-        <img src= "assets/products/apple-cinnamon-roll.jpg" alt="Apple cinnamon roll" class="product-image">
-        <p class="product-name">Apple cinnamon roll</p>
-        <p>$3.49</p>
-        </a> 
-      </div>
-      <div class="product-box">
-        <a href="../solution-hw2/detail.html">
-        <img src= "assets/products/raisin-cinnamon-roll.jpg" alt="Raisin cinnamon roll" class="product-image">
-        <p class="product-name">Raisin cinnamon roll</p>
-        <p>$2.99</p>
-        </a>
-      </div>
-      <div class="product-box">
-        <a href="../solution-hw2/detail.html">
-        <img src= "assets/products/walnut-cinnamon-roll.jpg" alt="Walnut cinnamon roll" class="product-image">
-        <p class="product-name">Walnut cinnamon roll</p>
-        <p>$3.49</p>
-        </a>
-      </div>
-      <div class="product-box">
-        <a href="../solution-hw2/detail.html">
-        <img src= "assets/products/double-chocolate-cinnamon-roll.jpg" alt="Double-chocolate cinnamon roll" class="product-image">
-        <p class="product-name">Double-chocolate cinnamon roll</p>
-        <p>$3.99</p>
-        </a>
-      </div>
-      <div class="product-box">
-        <a href="../solution-hw2/detail.html">
-        <img src= "assets/products/strawberry-cinnamon-roll.jpg" alt="Strawberry cinnamon roll" class="product-image">
-        <p class="product-name">Strawberry cinnamon roll</p>
-        <p>$3.99</p>
-        </a>
-      </div>
-    </div>
-    
+    <div class="products-list"> <!--all products-->
 
-  </body>
+        <div class="product-box"> <!--product 1-->
+            <a href="../solution-hw2/detail.html">
+                <img src="assets/products/original-cinnamon-roll.jpg" alt="Original cinnamon roll"
+                    class="product-image">
+                <p class="product-name">Original cinnamon roll</p>
+                <p>$2.49</p>
+            </a>
+        </div>
+        <div class="product-box"> <!--product 2-->
+            <a href="../solution-hw2/detail.html">
+                <img src="assets/products/apple-cinnamon-roll.jpg" alt="Apple cinnamon roll" class="product-image">
+                <p class="product-name">Apple cinnamon roll</p>
+                <p>$3.49</p>
+            </a>
+        </div>
+        <div class="product-box"> <!--product 3-->
+            <a href="../solution-hw2/detail.html">
+                <img src="assets/products/raisin-cinnamon-roll.jpg" alt="Raisin cinnamon roll" class="product-image">
+                <p class="product-name">Raisin cinnamon roll</p>
+                <p>$2.99</p>
+            </a>
+        </div>
+        <div class="product-box"> <!--product 4-->
+            <a href="../solution-hw2/detail.html">
+                <img src="assets/products/walnut-cinnamon-roll.jpg" alt="Walnut cinnamon roll" class="product-image">
+                <p class="product-name">Walnut cinnamon roll</p>
+                <p>$3.49</p>
+            </a>
+        </div>
+        <div class="product-box"> <!--product 5-->
+            <a href="../solution-hw2/detail.html">
+                <img src="assets/products/double-chocolate-cinnamon-roll.jpg" alt="Double-chocolate cinnamon roll"
+                    class="product-image">
+                <p class="product-name">Double-chocolate cinnamon roll</p>
+                <p>$3.99</p>
+            </a>
+        </div>
+        <div class="product-box"> <!--product 6-->
+            <a href="../solution-hw2/detail.html">
+                <img src="assets/products/strawberry-cinnamon-roll.jpg" alt="Strawberry cinnamon roll"
+                    class="product-image">
+                <p class="product-name">Strawberry cinnamon roll</p>
+                <p>$3.99</p>
+            </a>
+        </div>
+    </div>
+
+
+</body>
+
 </html>
