--- a/solution-hw2/cart.html
+++ b/solution-hw2/cart.html
@@ -16,7 +16,7 @@
         </ul>
       </nav>
       <hr>
-      <h1>Shopping cart</h1>
+      <h1>Our hand-made cinnamon rolls</h1>
     </div>
 
   </div>
